--- a/src/styles.css
+++ b/src/styles.css
@@ -364,6 +364,11 @@ width: 85%;
     border: 1px solid #36099f66;
 }
 
+.card-header{
+  
+    padding: -0.25rem 1.25rem !important;
+}
+
       /***************mediaquaries*********/
 @media screen and (min-width:120px)and (max-width:319px) {}
 
