--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -104,7 +104,8 @@
                             or <br />
                             Student want to register your Tech festivals <br />
                         </p>
-                        <button class="custom-ss-quick-register-block-button"> Register Here </button>
+                        <button class="custom-ss-quick-register-block-button" data-toggle="modal"
+                            data-target="#studentRegistrationModal"> Register Here </button>
                     </div>
 
                     <div class="col-md-6 col-sm-6" *ngIf="showTechTalk">
@@ -113,7 +114,8 @@
                             A Platform to interchange your views on technology <br />
 
                         </p>
-                        <button class="custom-ss-quick-register-block-button">Register &amp; Connect &amp; Talk
+                        <button class="custom-ss-quick-register-block-button" data-toggle="modal"
+                            data-target="#studentRegistrationModal">Register &amp; Connect &amp; Talk
                         </button>
                     </div>
 
@@ -126,7 +128,8 @@
                             <br />
                             register your academic project or Innovation
                         </p>
-                        <button class="custom-ss-quick-register-block-button"> Register &amp; Execute</button>
+                        <button class="custom-ss-quick-register-block-button" data-toggle="modal"
+                            data-target="#studentRegistrationModal"> Register &amp; Execute</button>
                     </div>
 
 
@@ -139,7 +142,8 @@
 
                             register your academic project or Innovation
                         </p>
-                        <button class="custom-ss-quick-register-block-button"> Register &amp; Execute</button>
+                        <button class="custom-ss-quick-register-block-button" data-toggle="modal"
+                            data-target="#studentRegistrationModal"> Register &amp; Execute</button>
                     </div>
 
                     <div class="col-md-6 col-sm-6" *ngIf="showProzMe">
@@ -159,7 +163,8 @@
                             <br />
                             A Platform to connect Mentor &amp; Mentee
                         </p>
-                        <button class="custom-ss-quick-register-block-button"> Register &amp; Connect</button>
+                        <button class="custom-ss-quick-register-block-button" data-toggle="modal"
+                            data-target="#studentRegistrationModal"> Register &amp; Connect</button>
                     </div>
 
 
