--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -530,7 +530,7 @@ cursor: pointer;
   height: 100%;
   margin: 0 auto;
   background: rgba(0, 0, 0, 0.712);
-  background: url('https://static1.squarespace.com/static/588e767db8a79b901b662c49/t/588ecea21b631b0e7c0302e2/1485754019842/HoW+collage.jpg');
+  background: url('/assets/images/students.jpg');
   width: 100%!important;
   max-width: 100%!important;
 }
