--- a/src/app/tech-bank/tech-bank.component.css
+++ b/src/app/tech-bank/tech-bank.component.css
@@ -100,7 +100,9 @@
 }
 
 /***********newcode******/
-
+.card-header h5 button{
+    font-weight: 500;
+}
 .crd-hdng, .crd-btn-dv, .tech-tlk-contnr{
     float: left;
     width: 100%;
@@ -119,7 +121,8 @@
 
 .accordion .card {
     width: 33%;
-    float: left;
+    /* float: left; */
+    display: inline-block;
     margin: 18px 2px;
     border: 1px solid #33099e87!important;
 }
@@ -136,11 +139,12 @@ h5 button.btn.btn-link.collapsed {
 /*****************media quaries**************************/
  @media screen and (min-width: 320px) and (max-width: 567px) {
     .col-12{
-         padding: 0;
+         /* padding: 0; */
      }
     .accordion .card {
         width: 100%;
-        float: left;
+        display: inline-block;
+        /* float: left; */
         margin: 18px 0px;
     }
     .tch-m-hdng{
@@ -160,7 +164,8 @@ h5 button.btn.btn-link.collapsed {
  @media only screen and (min-width: 540px) and (max-width: 767px) {
     .accordion .card {
         width: 49%;
-        float: left;
+        display: inline-block;
+        /* float: left; */
         margin: 18px 1px;
     }
     .card-body{
@@ -171,7 +176,8 @@ h5 button.btn.btn-link.collapsed {
  @media only screen and (min-width: 768px) and (max-width: 959px) {
     .accordion .card {
         width: 49%;
-        float: left;
+        display: inline-block;
+        /* float: left; */
         margin: 10px 3px;
     }
     .card-body{
